# moutils

./: README.md  pyproject.toml  renovate.jsonc
.github/workflows/: build.yml  pages.yml
demos/cloudflare/: package-lock.json  requirements.txt
demos/cloudflare/public/: login.html
notebooks/: example.py  pkceflow_login.py
src/moutils/: __init__.py  concurrent.py  oauth.py  url_info.py
src/moutils/static/: camera.css  camera.js  colorscheme.js  geolocation.js  keyboard.js  notification.js  online.js  pkce_flow.css  pkce_flow.js  print_page.js  print_page_button.js  screenshot.js  screenshot_button.js  shell.css  shell.js  viewport.js  visibility.js
tests/: test_widgets.py
